<resources>
    <string name="app_name">Athens Guide</string>
    <string name="foodtab">Food</string>
    <string name="bartab">Bars</string>
    <string name="hoteltab">Hotels</string>
    <string name="sightTab">Sights</string>
    <string name="content_image">Content Image</string>
    <string name="phone_number_image">phone number image</string>
    <string name="schedule_of_shop">Schedule of shop</string>
    <string name="location_icon">location icon</string>
    <string name="price_icon">price icon</string>
    <string name="aleria">Aleria</string>
    <string name="funky">Funky Gourmet</string>
    <string name="orosc">Oroscopo</string>
    <string name="hothot">Hot hot Burger</string>
    <string name="aleradd">Megalou Alexandrou 57</string>
    <string name="funkadd">Paramuthias 7</string>
    <string name="orosadd">Antinoros 42</string>
    <string name="hotadd">Megalou Alekou 32</string>
    <string name="alphone">+30 21 0522 2633</string>
    <string name="funk">+30 21 0524 2727</string>
    <string name="orosphone">+30 21 0723 8567</string>
    <string name="hotphone">+30 21 0322 2635</string>
    <string name="alhour">10:00-22:00</string>
    <string name="funhour">12:00-00:00</string>
    <string name="orohour">12:00-02:00</string>
    <string name="hothour">10:00-02:00</string>
    <string name="hotprice">€€</string>
    <string name="orosprice">€€€</string>
    <string name="funprice">€€€€</string>
    <string name="alerprice">€€€€</string>
    <string name="aname">A for Athens Cocktail Bar</string>
    <string name="matname"><![CDATA[Materia Prima Cava & Wine Bar]]></string>
    <string name="tafname">Taf The Art Foundation</string>
    <string name="mimname">MoMix Molecular Mixology</string>
    <string name="boozname">Booze</string>
    <string name="supname">Superfly-Bar</string>
    <string name="supadd">Empedokleous 28</string>
    <string name="boozadd">Kolokotroni 57</string>
    <string name="mimadd">Keleou 5</string>
    <string name="tafadd">Normanou 5</string>
    <string name="matadd">Falirou 68</string>
    <string name="athadd">Miaouli 2</string>
    <string name="athphone">+30 21 0324 4244</string>
    <string name="matphone">+30 21 0924 5935</string>
    <string name="tafphone">+30 21 0323 8757</string>
    <string name="mimphone">+30 697 435 0179</string>
    <string name="boozphone">+30 21 1405 3733</string>
    <string name="supphone">+30 21 1404 6076</string>
    <string name="suphour">11:00-02:00</string>
    <string name="boozhour">11:00-01:00</string>
    <string name="mimhour">10:00-23:00</string>
    <string name="tafhour">17:00-23:00</string>
    <string name="athhour">10:00-00:00</string>
    <string name="mathour">15:00-23:00</string>
    <string name="athprice">€€€€</string>
    <string name="matprice">€€€€€</string>
    <string name="tafprice">€€</string>
    <string name="mimprice">€€€</string>
    <string name="boozprice">€€€</string>
    <string name="supprice">€</string>
    <string name="metname">Hotel Metropolis</string>
    <string name="hilame">Hilton Athens</string>
    <string name="georgame">King George, A Luxury Collection Hotel</string>
    <string name="grandame">Hotel Grande Bretagne</string>
    <string name="mitadd">Mitropoleos 47</string>
    <string name="hiladd">Vassilis Sofias 46</string>
    <string name="georgeadd">3 Vassileos Georgiou A</string>
    <string name="bretadd">Vas. Georgiou A1</string>
    <string name="bretphone">+30 21 0333 0000</string>
    <string name="georgephone">+30 21 0522 9933</string>
    <string name="hilphone">+30 21 424 2633</string>
    <string name="mitphone">+30 21 1198 5351</string>
    <string name="mithour">09:00-22:00</string>
    <string name="hilhour">09:00-22:00</string>
    <string name="georgehour">08:00-23:00</string>
    <string name="brethour">08:00-01:00</string>
    <string name="mitprice">€€€</string>
    <string name="hilprice">€€€€</string>
    <string name="georgeprice">€€€€€</string>
    <string name="bretprice">€€€€€</string>
    <string name="acname">Acropolis</string>
    <string name="natname">National Archaeology Museum</string>
    <string name="agoraname">Agora: Ruins of the Ancient Marketplace</string>
    <string name="zeusname">Temple of Olympian Zeus</string>
    <string name="plakaname">Pláka and Anafiotika</string>
    <string name="acadd">Athens 14448</string>
    <string name="natadd">28th October ,Athens</string>
    <string name="agoradd">Adrianou 27</string>
    <string name="zeusadd">Athens 15551</string>
    <string name="plakaadd">Mnisikleous 24</string>
    <string name="plakaprice">€</string>
    <string name="zeusprice">€</string>
    <string name="agorprice">€€</string>
    <string name="natprice">€</string>
    <string name="acaprice">€</string>
    <string name="acahour">10:00-22:00</string>
    <string name="nathour">10:00-22:00</string>
    <string name="zeushour">08:00-18:00</string>
    <string name="zeusphone">+30 21 0321 0185</string>
    <string name="natphone">+30 21 3214 4800</string>
    <string name="acaphone">+30 21 0321 4172</string>
    <string name="acc">The greatest and finest sanctuary of ancient Athens, dedicated primarily to its patron, the goddess Athena</string>
    <string name="natexp">The National Archaeological Museum in Athens houses some of the most important artifacts from a variety of archaeological locations around Greece</string>
    <string name="agorexp">The Ancient Agora of Classical Athens is the best-known example of an ancient Greek agora</string>
    <string name="zeusexp">The Temple of Olympian Zeus also known as the Olympieion or Columns of the Olympian Zeus, is a monument of Greece</string>
    <string name="plakaexp">Pláka (Greek: Πλάκα) is the old historical neighborhood of Athens, clustered around the northern and eastern slopes of the Acropolis</string>
    <string name="mitexp">One of the finest hotels in Athens</string>
    <string name="hilexp">Hilton as the name says is one of the best hotels</string>
    <string name="kingexp">King George hotel got its name from the King of Greece, just imagine the luxury</string>
    <string name="bretagnexp">This is the best hotel in Athens, located in the center of athens syntagma</string>
    <string name="aleriaexp">Aleria restaurant for gourmet kitchen</string>
    <string name="hotexp">The best burgers in the town.Don\'t miss this out</string>
    <string name="orscexp">Located in the centre of Athens, next to Hilton, Oroscopo restaurant offers an excellent variety of greek and italian dishes with the best quality.</string>
    <string name="funkexp">A charming neoclassical house in downtown Athens, set off the main tourist track. The minimalist first floor dining room is decorated in black, white and grey. Wonderfully well-crafted, innovative dishes feature unusual</string>
    <string name="aexp">A for Athens the best view in the city</string>
    <string name="matexp">You want to taste wine and to eat delicious food then this is the best place</string>
    <string name="tafexp">Taf the most underground place to go</string>
    <string name="mimexp"><![CDATA[MoMix is the FIRST Molecular Mixology Bar Concept in Athens, Here you can travel your mind tasting cocktails & drinks in solid form and many other alternative ways… MoMix was created for traveling customer\'s senses to another Level]]></string>
    <string name="boozexp">A brain hub. Tribes and nations in creative disruption. Trend setters and mind clusters cooperate in full time.</string>
    <string name="supexp">You drinke a you fly like the name of the shop</string>
</resources>
