<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ListItem"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:padding="@dimen/padd10">

    <ImageView
        android:id="@+id/modelImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/imgheigh"
        android:contentDescription="@string/content_image" />

    <TextView
        android:id="@+id/nameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/eightdp"
        android:textSize="@dimen/textsize24"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modelImage" />

    <TextView
        android:id="@+id/explanationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/eightdp"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/eightdp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameView" />

    <ImageView
        android:id="@+id/phone_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/eightdp"
        android:contentDescription="@string/phone_number_image"
        android:src="@drawable/ic_smartphone_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explanationView" />

    <TextView
        android:id="@+id/phone_numberView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/eightdp"
        app:layout_constraintStart_toEndOf="@+id/phone_icon"
        app:layout_constraintTop_toBottomOf="@+id/explanationView" />

    <ImageView
        android:id="@+id/timeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/eightdp"
        android:contentDescription="@string/schedule_of_shop"
        android:src="@drawable/ic_access_time_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_icon" />

    <TextView
        android:id="@+id/scheduleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/sixdp"
        app:layout_constraintStart_toEndOf="@+id/timeView"
        app:layout_constraintTop_toBottomOf="@+id/phone_numberView" />

    <ImageView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/eightdp"
        android:contentDescription="@string/price_icon"
        android:src="@drawable/ic_attach_money_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeView" />

    <TextView
        android:id="@+id/moneyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/tedp"
        app:layout_constraintStart_toEndOf="@+id/price"
        app:layout_constraintTop_toBottomOf="@+id/scheduleView" />

    <ImageView
        android:id="@+id/location_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/eightdp"
        android:contentDescription="@string/location_icon"
        android:src="@drawable/ic_location_on_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <TextView
        android:id="@+id/locationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/fortedp"
        app:layout_constraintStart_toEndOf="@+id/location_icon"
        app:layout_constraintTop_toBottomOf="@+id/moneyView" />

</android.support.constraint.ConstraintLayout>